Added comments and READMEs, and changed template variable style to {{{}}} instead of <<<>>>

--- a/templates/main.html
+++ b/templates/main.html
@@ -7,7 +7,7 @@
     
 </div>
 <div id="tests" ng-app="DemoApp">
-    <<<tests>>>
+    {{{tests}}}
 </div>
 <script type="text/javascript">
     var app = angular.module('DemoApp',[]);
