--- a/templates/vertical.html
+++ b/templates/vertical.html
@@ -1,25 +1,25 @@
 <table style="width: 100%; border: 1px solid black; border-collapse: collapse;">
     <tr style="border: 1px solid black;">
         <th style="border: 1px solid black;">
-                <<<input_header>>>
+                {{{input_header}}}
         </th>
         <th style="border: 1px solid black;">
-                <<<output_header>>>
+                {{{output_header}}}
         </th>
         <th style="border: 1px solid black;">
-                <<<correct_header>>>
+                {{{correct_header}}}
         </th>
     </tr>
 <!--ENTRY
     <tr style="border: 1px solid black;">
         <td style="border: 1px solid black;">
-            <pre><<<input>>></pre>
+            <pre>{{{input}}}</pre>
         </td>
         <td style="border: 1px solid black;">
-            <pre><<<output>>></pre>
+            <pre>{{{output}}}</pre>
         </td>
         <td style="border: 1px solid black;">
-            <pre><<<correct>>></pre>
+            <pre>{{{correct}}}</pre>
         </td>
     </tr>
 -->
