--- a/templates/horizontal.html
+++ b/templates/horizontal.html
@@ -1,31 +1,31 @@
 <table style="width: 100%; border-collapse: collapse; table-layout: auto; overflow:auto; white-space: nowrap; display: inline-block;">
     <tr style="border: 1px solid black;">
         <th style="border: 1px solid black; width: 1px; white-space: nowrap; padding: 5px 10px;">
-            <<<input_header>>>
+            {{{input_header}}}
         </th>
 <!--ENTRY
         <td style="border: 1px solid black;">
-            <pre><<<input>>></pre>
+            <pre>{{{input}}}</pre>
         </td>
 -->
     </tr>
     <tr style="border: 1px solid black;">
         <th style="border: 1px solid black; width: 1px; white-space: nowrap; padding: 5px 10px;">
-            <<<output_header>>>
+            {{{output_header}}}
         </th>
 <!--ENTRY
         <td style="border: 1px solid black;">
-            <pre><<<output>>></pre>
+            <pre>{{{output}}}</pre>
         </td>
 -->
     </tr>
     <tr style="border: 1px solid black;">
         <th style="border: 1px solid black; width: 1px; white-space: nowrap; padding: 5px 10px;">
-            <<<correct_header>>>
+            {{{correct_header}}}
         </th>
 <!--ENTRY
         <td style="border: 1px solid black;">
-            <pre><<<correct>>></pre>
+            <pre>{{{correct}}}</pre>
         </td>
 -->
     </tr>
