Improved templates and beautify.py

--- a/templates/horizontal.html
+++ b/templates/horizontal.html
@@ -1,30 +1,30 @@
-<table style="width: 100%; border-collapse: collapse; table-layout: auto; overflow:auto; white-space: nowrap; display: inline-block;">
-    <tr style="border: 1px solid black;">
-        <th style="border: 1px solid black; width: 1px; white-space: nowrap; padding: 5px 10px;">
+<table class="gcheck gcheck-table gcheck-horizontal-table">
+    <tr class="gcheck gcheck-tr gcheck-horizontal-tr">
+        <th class="gcheck gcheck-th gcheck-horizontal-th">
             {{{input_header}}}
         </th>
 <!--ENTRY
-        <td style="border: 1px solid black;">
+        <td class="gcheck gcheck-td gcheck-horizontal-td">
             <pre>{{{input}}}</pre>
         </td>
 -->
     </tr>
-    <tr style="border: 1px solid black;">
-        <th style="border: 1px solid black; width: 1px; white-space: nowrap; padding: 5px 10px;">
+    <tr class="gcheck gcheck-tr gcheck-horizontal-tr">
+        <th class="gcheck gcheck-th gcheck-horizontal-th">
             {{{output_header}}}
         </th>
 <!--ENTRY
-        <td style="border: 1px solid black;">
+        <td class="gcheck gcheck-td gcheck-horizontal-td">
             <pre>{{{output}}}</pre>
         </td>
 -->
     </tr>
-    <tr style="border: 1px solid black;">
-        <th style="border: 1px solid black; width: 1px; white-space: nowrap; padding: 5px 10px;">
+    <tr class="gcheck gcheck-tr gcheck-horizontal-tr">
+        <th class="gcheck gcheck-th gcheck-horizontal-th">
             {{{correct_header}}}
         </th>
 <!--ENTRY
-        <td style="border: 1px solid black;">
+        <td class="gcheck gcheck-td gcheck-horizontal-td">
             <pre>{{{correct}}}</pre>
         </td>
 -->
