--- a/templates/vertical.html
+++ b/templates/vertical.html
@@ -1,24 +1,24 @@
-<table style="width: 100%; border: 1px solid black; border-collapse: collapse;">
-    <tr style="border: 1px solid black;">
-        <th style="border: 1px solid black;">
+<table class="gcheck gcheck-table gcheck-vertical-table">
+    <tr class="gcheck gcheck-tr gcheck-vertical-tr">
+        <th class="gcheck gcheck-th gcheck-vertical-th">
                 {{{input_header}}}
         </th>
-        <th style="border: 1px solid black;">
+        <th class="gcheck gcheck-th gcheck-vertical-th">
                 {{{output_header}}}
         </th>
-        <th style="border: 1px solid black;">
+        <th class="gcheck gcheck-th gcheck-vertical-th">
                 {{{correct_header}}}
         </th>
     </tr>
 <!--ENTRY
-    <tr style="border: 1px solid black;">
-        <td style="border: 1px solid black;">
+    <tr class="gcheck gcheck-tr gcheck-vertical-tr">
+        <td class="gcheck gcheck-td gcheck-vertical-td">
             <pre>{{{input}}}</pre>
         </td>
-        <td style="border: 1px solid black;">
+        <td class="gcheck gcheck-td gcheck-vertical-td">
             <pre>{{{output}}}</pre>
         </td>
-        <td style="border: 1px solid black;">
+        <td class="gcheck gcheck-td gcheck-vertical-td">
             <pre>{{{correct}}}</pre>
         </td>
     </tr>
