--- a/templates/vertical.html
+++ b/templates/vertical.html
@@ -8,11 +8,17 @@
     </tr>
     {% for row in rows %}
         <tr class="gcheck gcheck-tr gcheck-vertical-tr">
-        {% for field in row %}
-            <td class="gcheck gcheck-td gcheck-vertical-td">
-                <pre>{{field | diff('<span style="background-color: red">', '</span>')}}</pre>
+        {% if row | length == 1 %}
+            <td colspan="{{headers | length}}" class="gcheck gcheck-td gcheck-vertical-td">
+                <pre>{{row[0] | diff('<span style="background-color: red">', '</span>')}}</pre>
             </td>
-        {% endfor %}
+        {% else %}
+            {% for field in row %}
+                <td class="gcheck gcheck-td gcheck-vertical-td">
+                    <pre>{{field | diff('<span style="background-color: red">', '</span>')}}</pre>
+                </td>
+            {% endfor %}
+        {% endif %}
         </tr>
     {% endfor %}
 </table>
