--- a/templates/testbody.html
+++ b/templates/testbody.html
@@ -3,9 +3,9 @@
     <div class="gcheck gcheck-prereqs">
         Prerequisites weren't fullfilled:
         {% for detail in obj.prerequisite.details %}
-            {% if not detail['ispassed'] %}
+            {% if not detail.fullfilled %}
                 <div class="gcheck gcheck-prereq">
-                    - {{detail['suite']}}: {{detail['test']}}
+                    - {{detail.suite}}: {{detail.test}}
                 </div>
             {% endif %}
         {% endfor %}
