add timedout text to templates

--- a/templates/testbody.html
+++ b/templates/testbody.html
@@ -1,5 +1,9 @@
 <div class="gcheck gcheck-content">
-{% if not obj.prerequisite.fullfilled %}
+{% if obj.status == Status.Started %}
+    Timed out or crashed
+{% elif obj.status == Status.TimedOut%}
+    Timed out
+{% elif not obj.prerequisite.fullfilled %}
     <div class="gcheck gcheck-prereqs">
         Prerequisites weren't fullfilled:
         {% for detail in obj.prerequisite.details %}
@@ -10,6 +14,8 @@
             {% endif %}
         {% endfor %}
     </div>
+{% elif obj.status == Status.NotStarted %}
+    Test wasn't started due to the program halting.
 {% elif results | length == 0 %}
     <div class="gcheck gcheck-noresults">
         Nothing to show
